Fixed page getting cut off

--- a/client/src/styles/postStyle.css
+++ b/client/src/styles/postStyle.css
@@ -23,7 +23,7 @@ html, body{
     z-index: 0;
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 95%;
     align-content: center;
     overflow-y: scroll;
     overflow-x: hidden; 
